--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       communication, and design critique, further strengthening my expertise in user-centered design.
     </p>
     <p>
-      <a href="https://kelly-ankoue.notion.site/Kelly-Ankoue-s-Portfolio-1dbc14ba321c4d41a3ffa2dc1c354f19" target="_blank">See more here</a>
+      <a href="https://medium.com/@ka523/chronically-online-to-remodeling-tiktok-efac4d95ff44" target="_blank">See more here</a>
     </p>
   </div>
 </section>
